k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: profile-server-front-1
          servicePort: 9000
        path: /one
      - backend:
          serviceName: profile-server-front-2
          servicePort: 9000
        path: /two
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profile-server-front-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: profile-server-front-1
    spec:
      containers:
        - name: profile-server-front-1
          image: attosolimages.azurecr.io/profile-server-front:v1
          ports:
            - containerPort: 9000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profile-server-front-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: profile-server-front-2
    spec:
      containers:
        - name: profile-server-front-2
          image: attosolimages.azurecr.io/profile-server-front:v1
          ports:
            - containerPort: 9000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profile-server-back
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: profile-server-back
    spec:
      containers:
        - name: profile-server-back
          image: redislabs/rejson
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: profile-server-back
spec:
  selector:
    name: profile-server-back
  type: NodePort
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: profile-server-front-1
spec:
  selector:
    name: profile-server-front-1
  type: NodePort
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: profile-server-front-2
spec:
  selector:
    name: profile-server-front-2
  type: NodePort
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
